--- a/week-07/day-03/src/main/resources/templates/exercise2.html
+++ b/week-07/day-03/src/main/resources/templates/exercise2.html
@@ -6,6 +6,6 @@
     <meta charset="utf-8" />
 </head>
 <body>
-
+<p th:text="'Name: ' + ${name} + '; Balance: ' + ${#numbers.formatDecimal(balance, 1, 2)} + '; Animal Type: ' + ${animalType}"></p>
 </body>
 </html>
