add(app): PFC controller

--- a/week-07/day-05/src/main/resources/templates/index.html
+++ b/week-07/day-05/src/main/resources/templates/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 <ul>
-    <li>information</li>
+    <li>
+        <a href="">Information</a>
+    </li>
 </ul>
-<img src="greenfox.png" alt="greenfoxlogo">
+<img src="../static/greenfox.png" alt="greenfoxlogo">
 
 
 </body>
