--- a/week-07/day-05/src/main/resources/templates/index.html
+++ b/week-07/day-05/src/main/resources/templates/index.html
@@ -13,6 +13,8 @@
 <img src="greenfox.png" alt="greenfoxlogo"/>
 
     <p th:text="'This is ' + ${fox.name} + '. Currently living on ' + ${fox.food} + ' and ' + ${fox.drink} + '. He knows ' + ${fox.getTricks().size()} + ' trick(s).'"/>
+    <h1>Known tricks</h1>
+    <p th:if="${fox.getTricks().size() == 0}">You know no tricks, yet. Go and learn some</p>
 
 </body>
 </html>
