add(app): nutritionStore

--- a/week-07/day-05/src/main/resources/templates/index.html
+++ b/week-07/day-05/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
         <li>
             <a href="">Information</a>
         </li>
+        <li>
+            <a href="/nutritionStore">Nutrition Store</a>
+        </li>
     </ul>
 <img src="greenfox.png" alt="greenfoxlogo"/>
 
