--- a/week-08/day-02/src/main/resources/templates/index.html
+++ b/week-08/day-02/src/main/resources/templates/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>ToDo Main</title>
+    <title>ToDo</title>
 </head>
 <body>
-    <h1>Todos for today:</h1>
-    <ul>
-        <li th:each="todoline : ${notes}" th:text="${todoline}">Todo</li>
-    </ul>
-    <form th:action="@{/addTodo}" method="post">
-        <input type="text" th:name="title"/>
-        <input type="submit"/>
-    </form>
+
 </body>
 </html>
