--- a/week-07/day-05/src/main/resources/templates/index.html
+++ b/week-07/day-05/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Fox</title>
+    <title>Programmer Fox Club</title>
 </head>
 <body>
     <ul>
@@ -12,12 +12,21 @@
         <li>
             <a href="/nutritionStore">Nutrition Store</a>
         </li>
+        <li>
+            <a href="/trickCenter">Trick Center</a>
+        </li>
     </ul>
 <img src="greenfox.png" alt="greenfoxlogo"/>
 
-    <p th:text="'This is ' + ${fox.name} + '. Currently living on ' + ${fox.food} + ' and ' + ${fox.drink} + '. He knows ' + ${fox.getTricks().size()} + ' trick(s).'"/>
+    <p th:text="'This is ' + ${fox.getName()} + '. Currently living on ' + ${fox.getFood()} + ' and ' + ${fox.getDrink()} + '. He knows ' + ${fox.getTricks().size()} + ' trick(s).'"/>
     <h1>Known tricks</h1>
     <p th:if="${fox.getTricks().size() == 0}">You know no tricks, yet. Go and learn some</p>
+    <p th:if="${fox.getTricks().size() > 0}" th:text="'He knows: ' + ${fox.getTricks().size()} + 'tricks:'"></p>
+    <ul>
+        <li>th:each="trick : ${fox.getTricks()}">
+            <span th.text="${trick}"/>
+        </li>
+    </ul>
 
 </body>
 </html>
