--- a/week-07/day-05/src/main/resources/templates/nutritionStore.html
+++ b/week-07/day-05/src/main/resources/templates/nutritionStore.html
@@ -13,7 +13,28 @@
         <a href="/nutritionStore">Nutrition Store</a>
     </li>
 </ul>
+<img src="greenfox.png" alt="greenfoxlogo"/>
 
+<p th:text="'So ' + ${fox.getName()} +  ' is currently living on ' + ${fox.getFood()} + ' and ' + ${fox.getDrink()} + '. But you can give him other food and drink below.'">This is Mr. Green. Currently living on salad and water. He knows 0 trick.</p>
+<form method="post" action="/changefood">
+    <label>
+        Food
+        <select name="food">
+            <option value="bird" th:selected="bird">bird</option>
+            <option value="duck">duck</option>
+            <option value="hedgehog">hedgehog</option>
+            <option value="flower">flower</option>
+        </select>
+        Drink
+        <select name="drink">
+            <option value="water" th:selected="water">water</option>
+            <option value="rum">rum</option>
+            <option value="coke">coke</option>
+            <option value="beer">beer</option>
+        </select>
+    </label>
+    <input type="submit" value="Change Nutritions"/>
+</form>
 
 </body>
 </html>
